<resources>
    <string name="app_name">Домашні улюбленці</string>
    <string name="descr_dog">
        Такси це одна з найстаріших норних собак, формування породи почалося ще на початку XIX століття, на території Південної Німеччини. Порода бере свої початки від гончих собак, а саме від гончака коротконогого, саме від них вони успадкували такі мисливські якості як, здатність шукати слід, йти за здобиччю, заганяти і утримувати звіра. Далі почалася селективна робота і закріплення найкращих бажаних якостей. Собаки цінувалися за свої мисливські якості і здатність залазити в нори, на відміну від звичайних довгоногих собак, такси могли зайти в нору і вигнати лиса або борсука.

Уже в середині XVII століття є згадки про два типа такс, це кривонога і грубошерстні низькі гончі. Такс щиро полюбили і розводили, вони стали кращими друзями і помічниками в полюванні. До кінця XVIII століття кількість такс значно збільшилася, з\'явилися заводчики, які почали розводити цю породу. Негласно собак вже поділяли на мисливських і кімнатних собак. Настав той момент, коли породу можна було затвердити, і в 1870 році офіційно затвердили стандарт породи. Пізніше в 2001 році був прийнятий стандарт породи такса в міжнародній кінологічної федерації.
На початку XIX століття на території Російської імперії і України такс сприймали більше як декоративних собак ніж робочих. Часто зображення такс можна зустріти на картинах знаменитих художників або в віршах і розповідях.
   Зараз вже є повністю сформовані стандарти і ті характерні риси, якими собаки відрізняються від інших представників свого виду. Такси мають приосадкувате мускулисте тіло, короткі масивні лапи, довгу витягнуту морду, довгі звисаючі вуха, які закруглені на кінцях. Спина мускулиста і міцна, грудина широка і має характерний виступ, кіль, хвіст при цьому досить короткий, масивний і гострий на кінці. Сама порода має безліч різновидів і забарвлень. За розміром ми можемо розділити таксу на три типи
    </string>
    <string name="descr_cat">Британські пушистики схожі на плюшевих ведмежат. Це компактні і при цьому потужні коти.
    У них повні широкі груди, короткі або середньої довжини сильні ноги, округлі лапи, хвіст – товстий в основі, з округлим кінцем. Голова у британців кругла, з широко поставленими вухами середнього розміру. Чарівна мордочка з круглими щоками, твердим підборіддям, великими відкритими очима і широким носом середньої довжини. Шерсть коротка і дуже щільна. На дотик британець – справжній плюшевий ведмедик!

Існує невелика плутанина в назві породи. Деякі називають її британська висловуха короткошерста кішка, що абсолютно невірно. Є дві різних породи: шотландська висловуха кішка і британська короткошерста, які мають, звичайно, багато спільного, проте зареєстровані як дві різні породи.

Характер британської короткошерстої кішки такий же «плюшевий». Ці чарівні створення дозволяють робити з собою все, що не принижує їх котячої гідності. Любов кішки до господарів не знає меж, проте, нав\'язливою її не назвеш. Навіть якщо ви подовгу відсутні, ваш британський улюбленець буде терпляче чекати вас, а час очікування проведе цікаво і з користю для себе. Чи може просто влягтися спати, і коли ви повернетеся додому, то вас зустріне ласкава плюшева грудочка і обдарує своєю любов\'ю.

Милі і ласкаві тварини, по вдачі вони істинні королі. І якщо у вашому будинку живуть інші домашні вихованці, цей «ведмедик» швидко стане ватажком зграї.

Плюшеві красені прекрасно адаптуються до життя як у квартирі, так і на дачі. Вони – відмінні мисливці. Побачивши здобич, моментально перетворюються на тигра, отримуючи величезне задоволення від прогулянок по травичці і полювання на дрібну живність.
    </string>
    <string name="descr_ara">Зовнішній вигляд Папуги Ара-самі великі папуги серед папугоподібних. Рід Ара налічує 15 підвидів. Розмір і забарвлення птаха значно коливається залежно від виду. Так, червоний Ара досягає в довжину до 90 см, синьо-жовтий може сягати 95 см, а максимальний розмір Гіацинтового сягає майже метра.
Забарвлення оперення, переливають всіма відтінками червоного, синього, зеленого і жовтого, робить цих папуг одними із самих улюблених домашніх вихованців.

Найчастіше яскравість забарвлення Ара прямо пропорційна його розміру. Насиченість кольору пір\'я молодняка і дорослої птиці практично не відрізняється, так само, як і забарвлення самців і самок.
Відмінною рисою Ара стали практично не оперені ділянки голови навколо очей. Дрібні пір\'ячка цієї зони, складені в химерні візерунки, реагують на найменшу зміну стану і настрою птиці. У зв\'язку з цим їх зовнішній вигляд є одним з важливих діагностичних ознак при визначенні захворювання папуг.
    Батьківщина Ара-тропічні ліси, де основним їх харчуванням служать тропічні фрукти з кісточкою твердішою за камінь. Тому Ара мають найсильніший серед усіх папуг високий дзьоб. Він сплощений з боків і закруглений донизу. Крила мають загострену форму. Довжина крила в розмаху сягає 40 см і більше. Довжина клиноподібного хвоста може перевищувати навіть довжину тіла птаха.
        Характер Ара
Вирісши в домашніх умовах, пташеня не доставить господареві занадто багато клопоту. Характер такого птаха буде спокійним і врівноваженим, прищеплені від родичів характерні риси поведінки зроблять його легким у поведінці. І навпаки, пташеня народжене в дикій природі, вимагає до себе підвищеної уваги. Тому кращим вибором стане молодий птах. Тим більше, що термін життя Ара досягає 100 років.
    </string>
    <string name="dog_name">Сашко</string>
    <string name="cat_name">Сеня</string>
    <string name="ara_name">Міккі</string>
</resources>